cleaned up typos

--- a/salary_analytics/salary.ipynb
+++ b/salary_analytics/salary.ipynb
@@ -13,7 +13,7 @@
    "id": "171ad39c-1070-494d-8af8-9f5ca5e45231",
    "metadata": {},
    "source": [
-    "This repository consists of conducting analysis on publicaly submitted salaries. The data was gathered and inspired by [Christen Nino De Guzman](https://www.linkedin.com/in/christenndg/) on her linkedin post about wage transparency. You can find the post [here](https://www.linkedin.com/feed/update/urn:li:activity:6883141659610234880/) and the associated csv [here](https://docs.google.com/spreadsheets/d/19h0WT9Xjf9ncNmJDWpd8fzz7YnB37nemDnxKSO0EE8o/edit#gid=1664289965). She advocated this on her linkedin community and it gained a lot of traction, nearly 60,000 people have anonomously submitted their total compensation breakdown, gender, age range, etc. The purpose of this article is to strictly do an analysis on the data retried. The article will consist of a few different segments as outlined below:\n",
+    "This repository consists of conducting analysis on publicly submitted salaries. The data was gathered and inspired by Christen Nino De Guzman on her LinkedIn post about wage transparency. You can find the post here and the associated CSV file here. She advocated this on her LinkedIn community and it gained a lot of traction, nearly 60,000 people have anonymously submitted their total compensation breakdown, gender, age-range, etc. The focus of this article is to conduct an analysis of the data retrieved. The article will consist of a few different segments as outlined below:  \n",
     "\n",
     "**Table of Contents**\n",
     "- Data Retrieval\n",
@@ -35,8 +35,6 @@
     "import numpy as np\n",
     "import seaborn as sns\n",
     "import matplotlib.pyplot as plt\n",
-    "import plotly as pt\n",
-    "\n",
     "sns.set()"
    ]
   },
