updated documentation and resolved typos

--- a/salary_analytics/salary.ipynb
+++ b/salary_analytics/salary.ipynb
@@ -81,6 +81,39 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 4,
+   "id": "615798f4-753f-485f-a222-920a845139a8",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Index(['Timestamp', 'Age Range', 'Years of Experience', 'Industry',\n",
+       "       'Job Title', 'Company Name', 'Highest Level of Education Received',\n",
+       "       'Closest Major City and State (e.g. Santa Clara, CA)', 'Country',\n",
+       "       'Annual Base Salary (if hourly, please convert to annual)',\n",
+       "       'Annual Bonus', 'Annual Average of RSUs',\n",
+       "       'Signing Bonus (if none, leave blank)', 'Currency (USD, CAD, etc)',\n",
+       "       'How many vacation days are you given per year?',\n",
+       "       'How many sick days are you given per year?',\n",
+       "       'How many days per week are you required to work onsite/in the office?',\n",
+       "       'Do you openly discuss salary with your colleagues?',\n",
+       "       'How many months Maternity or Paternity does your company offer?',\n",
+       "       'Gender (optional)', 'Unnamed: 20', 'Diverse Identity (Optional)'],\n",
+       "      dtype='object')"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "d.columns"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "id": "e43a4bcb-0936-443e-aa9a-ae9a1072d002",
    "metadata": {},
@@ -98,7 +131,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "id": "d5f6c499-82b7-4c66-a3de-2a4f3b022ecf",
    "metadata": {},
    "outputs": [],
@@ -132,7 +165,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "id": "1d87618b-0fed-42cb-a2ed-8a8a3a120de7",
    "metadata": {},
    "outputs": [],
@@ -156,12 +189,14 @@
     "\n",
     "    if cur == 'nan' or cur == 'n/a' or cur == '-':\n",
     "        return np.nan\n",
-    "    return cur"
+    "    return cur\n",
+    "\n",
+    "d['currency'] = d['currency'].apply(lambda x : clean_currency(x))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 21,
    "id": "19c9f5be-1de1-4489-a509-0367a64ee366",
    "metadata": {},
    "outputs": [],
@@ -175,32 +210,17 @@
     "    try:\n",
     "        return int(wage)\n",
     "    except:\n",
-    "        return np.nan"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 7,
-   "id": "d84bab1e-d9e5-42bb-8c4e-e748476b1b45",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "d['annual_wage'] = d['annual_wage'].apply(lambda x : clean_wage(x)).astype(float)"
+    "        return np.nan\n",
+    "    \n",
+    "d['annual_wage'] = d['annual_wage'].apply(clean_wage).astype(float)\n",
+    "d['signing_bonus'] = d['signing_bonus'].apply(clean_wage).astype(float)\n",
+    "d['bonus'] = d['bonus'].apply(clean_wage).astype(float)\n",
+    "d['avg_rsu'] = d['avg_rsu'].apply(clean_wage).astype(float)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 8,
-   "id": "bb97dac3-f20d-418d-8da5-d6d3f4e6d6d7",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "d['currency'] = d['currency'].apply(lambda x : clean_currency(x))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 9,
    "id": "b1216888-83eb-4330-998e-0777b5d1d885",
    "metadata": {},
    "outputs": [
@@ -220,7 +240,7 @@
        "Name: max_edu, dtype: int64"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -231,7 +251,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 9,
    "id": "4551304a-65e7-48b4-a67c-7b64295b8209",
    "metadata": {},
    "outputs": [],
@@ -252,7 +272,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 10,
    "id": "661cc427-e9fc-4f97-b710-627bfd0116bb",
    "metadata": {},
    "outputs": [],
@@ -277,7 +297,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 11,
    "id": "d9b7e899-8402-4457-844b-8a10c66f6af9",
    "metadata": {},
    "outputs": [],
@@ -304,7 +324,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 12,
    "id": "21d0f5a5-baa9-4a9a-a1c7-8c9c7eb0d08e",
    "metadata": {},
    "outputs": [],
@@ -326,7 +346,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 13,
    "id": "1beba804-e970-4da0-b50f-272cf314fab6",
    "metadata": {},
    "outputs": [],
@@ -351,12 +371,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 14,
    "id": "89fa8fd9-6094-4d27-8f17-2788c3472bff",
    "metadata": {},
    "outputs": [],
    "source": [
     "def clean_yoe(yoe):\n",
+    "    '''\n",
+    "    This function will convert the yoe to their associated integer or leave it as\n",
+    "    `20+` or return np.nan\n",
+    "    '''\n",
     "    yoe = str(yoe).lstrip().rstrip()\n",
     "    if yoe == 'nan':\n",
     "        return np.nan\n",
@@ -372,18 +396,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
-   "id": "d977e209-135b-4dbe-a091-00167773dbbb",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "d['signing_bonus'] = d['signing_bonus'].apply(clean_wage)\n",
-    "d['bonus'] = d['bonus'].apply(clean_wage)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 15,
    "id": "1ebb48b1-4d3f-4c4f-a4c3-288960684ed8",
    "metadata": {},
    "outputs": [],
@@ -414,7 +427,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 16,
    "id": "6450ce30-0b7c-40fb-b93f-3fecc3414eec",
    "metadata": {},
    "outputs": [],
@@ -436,7 +449,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 17,
    "id": "a6429916-2529-438f-a7c3-e1775c323279",
    "metadata": {},
    "outputs": [],
@@ -462,17 +475,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
-   "id": "4dfcb132-a074-41a3-98c5-0bd91001ca78",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "d['avg_rsu'] = d['avg_rsu'].apply(clean_wage)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 19,
    "id": "dcac0a1d-cd2a-4d73-b73c-96d5609138bd",
    "metadata": {},
    "outputs": [],
@@ -501,7 +504,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 20,
    "id": "1d4d2570-2ec8-471c-865b-3ea916b95735",
    "metadata": {},
    "outputs": [],
@@ -1209,11 +1212,10 @@
    "metadata": {},
    "source": [
     "## Caveats\n",
-    "Please be aware that there are a lot of things to consider when analyzing and conducting this analysis. A saying in data science is that the quality of your results is purely dependednt on the quality of the data. With that beings said, since the data in this article was provided anonymously from random people through LinkedIn, a lot of the results is based on the integreity of each individual who provided information. Furthermore, the data could definetly be cleaned a lot more rigerously. For the purposes of this article I aimed to clean **majority** of the data but not all, with that being said, the results observed above could definetly be different if further cleaning was done. Finally, different datasets trying to answer the same questions can come to different conclusions, if Glassdoor or Indeed were to do this exact same analysis to answer the same questions, I would be skeptical to see that they get the same sort of results / conclusions. \n",
-    "\n",
+    "Please be aware that there are a lot of things to consider when analyzing and conducting this analysis. A saying in data science is that the quality of your results is purely dependent on the quality of the data. With that beings said, since the data in this article was provided anonymously from random people through LinkedIn, a lot of the results is based on the integrity of each individual who provided information. Furthermore, the data could definitely be cleaned a lot more rigorously. For the purposes of this article I aimed to clean **majority** of the data but not all, with that being said, the results observed above could definitely be different if further cleaning was done. Finally, different datasets trying to answer the same questions can come to different conclusions, if Glassdoor or Indeed were to do this exact same analysis to answer the same questions, I would be skeptical to see that they get the same sort of results / conclusions.\n",
     "\n",
     "## Concluding Remarks\n",
-    "Overall the analysis conducted was interesting but with this dataset a lot more interesting things and questions could be answers. I created a generalized function which would answer a variety of questions I proposed for this article simply out of curiosity. The data is publically available and more individuals could contribute to it even after the posting of this article. With that being said, feel free to ask your own questions, and spark your own curiosity. For individuals wanting to break into a data driven role, being curious, taking initiative, communicating results and thinking critically are essential to be successful in any data driven roles. Continue the work on this by answering unanswered questions."
+    "Overall the analysis conducted was interesting but with this dataset a lot more interesting things and questions could be answers. I created a generalized function which would answer a variety of questions I proposed for this article simply out of curiosity. The data is publicly available and more individuals could contribute to it even after the posting of this article. With that being said, feel free to ask your own questions, and spark your own curiosity. For individuals wanting to break into a data driven role, being curious, taking initiative, communicating results and thinking critically are essential to be successful in any data driven roles. Continue the work on this by answering unanswered questions."
    ]
   },
   {
