updated salary notebook

--- a/salary_analytics/salary.ipynb
+++ b/salary_analytics/salary.ipynb
@@ -170,18 +170,18 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "curr_dct = {\n",
-    "    # I'm aware that dollars and $ can be across many different currencies, I'm making a generalized assumption\n",
-    "    'usd' : ['us dollar', 'us dollars', 'usda', 'usdp', 'dollars', '$', 'usa', 'uds', 'ysd', 'uss'],  \n",
-    "    'cad' : ['can', 'canadian', 'caf', 'canada'],\n",
-    "    'eur' : ['euro', 'euros', 'eu',],\n",
-    "    'gbp' : ['pound', 'pound sterling', 'pounds', 'british pounds', 'british pound', 'gbp £']\n",
-    "}\n",
-    "\n",
-    "def clean_currency(cur, curr_dct = curr_dct):\n",
+    "def clean_currency(cur):\n",
     "    '''\n",
     "    Will clean the currency column \n",
     "    '''\n",
+    "    curr_dct = {\n",
+    "        # I'm aware that dollars and $ can be across many different currencies, I'm making a generalized assumption\n",
+    "        'usd' : ['us dollar', 'us dollars', 'usda', 'usdp', 'dollars', '$', 'usa', 'uds', 'ysd', 'uss'],  \n",
+    "        'cad' : ['can', 'canadian', 'caf', 'canada'],\n",
+    "        'eur' : ['euro', 'euros', 'eu',],\n",
+    "        'gbp' : ['pound', 'pound sterling', 'pounds', 'british pounds', 'british pound', 'gbp £']\n",
+    "    }\n",
+    "    \n",
     "    cur = str(cur).lstrip().rstrip().strip().lower()\n",
     "    for k,v in curr_dct.items():\n",
     "        if cur in v:\n",
@@ -1030,7 +1030,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 47,
    "id": "747c5d4e-1de4-4134-8d41-d503ead26038",
    "metadata": {},
    "outputs": [
@@ -1744,8 +1744,61 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 44,
    "id": "10643aea-dcb7-49ff-8ebb-c79d19704acc",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def getPairsCount(arr, n, k_3):\n",
+    "\n",
+    "    count = 0  # Initialize result\n",
+    "\n",
+    "    # Consider all possible pairs\n",
+    "    # and check their sums\n",
+    "    for i in range(0, n):\n",
+    "        for j in range(i + 1, n):\n",
+    "            if arr[i] + arr[j] == k_3:\n",
+    "                count += 1\n",
+    "\n",
+    "    return count"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 46,
+   "id": "474c27e2-656c-43c0-bdff-bb37c3de5e74",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "5"
+      ]
+     },
+     "execution_count": 46,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "k_3 = -10\n",
+    "arr_3 = [4,5,-2,4,3,1,2,4,5,2,45,-6,3,4,-3,2,-8,-7,-4,3,2,0,10,-10,-4,-5]\n",
+    "n = len(arr_3)\n",
+    "getPairsCount(arr_3, n, k_3)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "1188c341-0111-46ee-bc12-c49d79df95ca",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "cc8177e6-700c-46bc-8870-aae464c5cb12",
    "metadata": {},
    "outputs": [],
    "source": []
