updated docs on node2vec process

--- a/n2v/n2v.ipynb
+++ b/n2v/n2v.ipynb
@@ -15,10 +15,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "\"\"\"\n",
-    "@author: vatsal\n",
-    "\"\"\"\n",
-    "\n",
     "import networkx as nx\n",
     "import pandas as pd\n",
     "import random\n",
@@ -49,6 +45,33 @@
   },
   {
    "cell_type": "code",
+   "execution_count": null,
+   "id": "e3edea75-8159-47f3-95c4-3ed1cd35ca2f",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def generate_graph_deg_dist(deg_dist, dt = nx.MultiGraph()):\n",
+    "    '''\n",
+    "    This function will generate a networkx graph G based on a degree distribution\n",
+    "    provided by the user.\n",
+    "    \n",
+    "    params:\n",
+    "        deg_dist (List) : An list of degrees associated to the network you want to\n",
+    "                          create.\n",
+    "                          \n",
+    "    example:\n",
+    "        G = generate_graph_deg_dist(\n",
+    "            deg_dist = [7,5,2,5,6,7,5,3,2,1,4,5,7,4,3,2,5,7,8,10],\n",
+    "            dt = nx.MultiGraph()\n",
+    "        )\n",
+    "    '''\n",
+    "    G = dt\n",
+    "    G.add_nodes_from()\n",
+    "    pass"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 2,
    "id": "f177108f-2a2d-4672-84d7-5f6f257d01ad",
    "metadata": {},
@@ -57,11 +80,22 @@
     "def generate_graph(n, p, dt = nx.MultiGraph()):\n",
     "    '''\n",
     "    This function will generate a graph G based on the users input parameters\n",
+    "    source : https://stackoverflow.com/questions/61958360/how-to-create-random-graph-where-each-node-has-at-least-1-edge-using-networkx\n",
     "    \n",
     "    params:\n",
     "        n (Integer) : The number of nodes you would like in the graph\n",
     "        p (Float) : The probability of adding an edge between nodes\n",
     "        dt (Function) : The type of the graph you want to create\n",
+    "    \n",
+    "    returns:\n",
+    "        A networkx graph\n",
+    "    \n",
+    "    example:\n",
+    "        G = generate_graph(\n",
+    "            n = 1000,\n",
+    "            p = 0.15,\n",
+    "            dt = nx.MultiGraph()\n",
+    "        )\n",
     "    '''\n",
     "    edges = combinations(range(n), 2)\n",
     "    G = dt\n",
@@ -182,7 +216,7 @@
     }
    ],
    "source": [
-    "%time g_emb = n2v(G, dimensions=16, weight_key='weight')"
+    "%time g_emb = n2v(G, dimensions=16)"
    ]
   },
   {
@@ -663,14 +697,6 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
-   "id": "0ec62926-4604-49ef-a3fd-1d6fe23e0577",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
    "execution_count": 19,
    "id": "beb40063-e7f0-4004-9618-56278a7bad17",
    "metadata": {},
@@ -701,33 +727,12 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "6d933882-a970-471d-80c6-3584afcd52a0",
+   "cell_type": "markdown",
+   "id": "e9c6412f-32bb-4b8f-b9a2-3e1dd936bebd",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "<seaborn.axisgrid.PairGrid at 0x7fe043d24d90>"
-      ]
-     },
-     "execution_count": 20,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
    "source": [
-    "sns.pairplot(emb_df)"
+    "---"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "7d46e028-a479-4baa-b6b2-9cfbe17ae7a1",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
